Bug 368347 - "Importer (Win Eudora, Mail) does not import message STATUS (read, unread, etc..)" (Fix small bugs in the filespec modifications made to original patch, which caused code not to work as originally intended) [p=gwenger@qualcomm.com (Geoffrey C. Wenger) r=bienvenu sr=mscott]